<resources>
    <string name="app_name">Curator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add_section">Add section</string>
    <string name="add_rule">Add rule</string>
    <string name="about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="large_text">
        "A simple app by yiotro.\n\n"

        "Made to help curators at 4pda to do their job.\n"
        "E-mail: yiotro93@gmail.com\n\n"

        "Special thanks:\n"
        "game_hacker_#9 - original idea\n"
        "LazyMind - some more ideas\n"
        "just_bol - default rules\n"
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="section_name">Section name</string>
    <string name="create">Create</string>
    <string name="_4pda_curator">4pda Curator</string>
    <string name="made_by_yiotro">Made by yiotro</string>
    <string name="add">Add</string>
    <string name="text">Text</string>
    <string name="rule_title">Rule title</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_section">Delete section</string>
    <string name="deletion">Deletion</string>
    <string name="delete_question">Really delete section?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="can_not_delete_section">Can\'t delete section</string>
    <string name="pref_header_about">About</string>

    <string name="default_welcome_phrase">[b]Ознакомьтесь с [URL=http://4pda.ru/forum/index.php?act=boardrules]Правилами Форума[/URL]![/b]</string>

    <string name="default_ending_phrase"></string>

    <string name="default_tag">cur</string>

    <string name="default_rules">
[formatted]\n
-[3.1 и 3.2] Язык форума - русский\n
        3.1. Официальный язык ресурса — русский. \n
        3.2. Все сообщения должны писаться кириллицей. Допускается использование транслита только в исключительных случаях. Для перевода текста в нормальный вид настоятельно рекомендуем пользоваться сервисом translit.ru или подобными.\n

-[3.4] Коверкание языка\n
        3.4. Надуманные ошибки и преднамеренное злостное несоблюдение правил русского языка (в том числе злоупотребление т. н. «падонковским языком») ЗАПРЕЩЕНЫ. За чрезмерное употребление т. н. «олбанизмов» может последовать бан!\n

-[4.1 и 4.2] Сообщение должно быть информативным\n
        4.1. Cледует внимательно ознакомиться с Правилами принятыми в разделе, перед созданием новой темы или сообщения. \n
        4.2. Название темы должно быть максимально информативным, таким, чтобы уже из названия темы другим пользователям была приблизительно понятна Ваша проблема. В тексте сообщения давайте развернутое описание вашей проблемы.\n

-[4.4] Поиск по теме\n
        4.4. Если вы нашли тему, которая соответствует вашей проблематике, не следует сразу же писать в ней сообщение. Возможно, ваша проблема уже обсуждалась, и решение найдено. Воспользуйтесь «версией для печати» и поиском по ключевым словам в ней. Непременно прочитайте шапку темы — в неё помещается полезная информация, специально для вас.\n

-[4.5] Даблпостинг\n
        4.5. Создание дублей сообщений и тем запрещено. Если вы по ошибке создали тему или сообщение не в том разделе, где планировали (или осознали ошибочность выбора), не создавайте аналогичные темы или сообщения в другом разделе. Обратитесь к модератору через кнопку «Жалоба» — он перенесёт вашу тему или сообщение в правильный раздел.\n

-[4.6] Воспользуйтесь кнопкой "Жалоба"\n
        4.6. Если вы увидели, что кто-то нарушает правила на ресурсе (создан дубликат существующей темы, агрессия либо флуд в сообщениях, неверное расположение темы и пр.), не стоит создавать новые сообщения об этом — просто нажмите кнопку [img]http://s.4pda.ru/forum/style_images/f/281-p_report.gif[/img], и Модераторы примут меры.\n

-[4.7.1] Избегайте флуда, лирических отступлений\n
        4.7.1. При ответе в существующую тему постарайтесь формулировать вопрос или ответ так, чтобы он был понятен остальным участникам форума. Избегайте флуда, философствований, лирических отступлений.\n

-[4.7.2] Старайтесь писать грамотно\n
        4.7.2. Сообщения, в которых присутствуют грамматические и/или синтаксические ошибки, могут вызвать негативную реакцию участников форума. Старайтесь писать грамотно.\n

-[4.11.1] Замена русских букв английскими\n
        4.11.1 В названии темы и сообщениях запрещена замена русских букв похожими из других языков, и наоборот.\n

-[4.11.2] Написание БОЛЬШИМИ БУКВАМИ\n
        4.11.2 В названии темы и сообщениях запрещено написание тем и сообщений ЗАГЛАВНЫМИ БУКВАМИ.\n

-[4.11.3] КрИвОе НаПиСаНиЕ\n
        4.11.3 В названии темы и сообщениях запрещено написание сообщений прописными и строчными буквами вперемешку («вОТ тАкИм оБрАзОм») или буквами разных алфавитов («slеdующiм оbраzом»)\n

-[4.12] Личная переписка в теме\n
        4.12. Запрещено создание тем или сообщений, не предполагающих обсуждения, или предполагающих личную переписку с конкретным участником форума, в том числе публикация объявлений рекламного и иного характера. Для личной переписки используйте систему личных сообщений.\n

-[4.13] Подъем темы\n
        4.13. Запрещается публикация сообщений, имеющих целью лишь подъём темы в списке и при этом не несущих смысловой нагрузки, например: «неужели никто не знает?» или «ап!».\n

-[4.14] Побуждения к быстроте ответа\n
        4.14. Запрещены неинформативные названия тем, например: «Памагите!», «У меня проблема!», «Крик души!» и тому подобные. Также запрещено в теме сообщения писать личные пожелания, например: «Настройка Bluetooth. Срочно!!!». Если участники форума знают ответ на ваш вопрос, они ответят независимо от того, «срочно» вам это надо или нет.\n

-[4.15] Сообщения, перегруженые знаками препинания\n
        4.15. Запрещены названия тем и сообщения, перегруженные знаками препинания (более трёх подряд), например: «Как настроить Wi-Fi????????». Исключение составляет раздел «Трепалка».\n

-[4.16] Ответ без текста, ответы из смайликов\n
        4.16. Запрещён ответ без текста (смайлом, включая текстовые смайлы). А также ответы, состоящие только из смайлов, либо перегруженные ими (более трёх смайлов в одном сообщении), во всех разделах, кроме раздела «Трепалка».\n

-[4.17] Обсуждение не связанных между собой вопросов\n
        4.17. Запрещено обсуждение не связанных между собой вопросов в одной теме.\n

-[4.18] Оффтоп\n
        4.18. Запрещено отклонение от темы.\n

-[4.19] Злоупотребление цитированием\n
        4.19. Запрещено злоупотребление цитированием (оверквотинг, overquoting). Не нужно полностью цитировать сообщения оппонента — достаточно выделить главные моменты и нажать на кнопку [img]http://s.4pda.ru/forum/style_images/f/281-quote.gif[/img].\n

-[5.1 и 5.2] Репутация, спасибо, благодарю\n
        5.1. Если участник форума дал хороший совет, который помог в решении вашей проблемы, не следует помещать сообщение с текстом «Спасибо! Ты супер!!!». На нашем форуме благодарность принято выражать путём поднятия репутации конкретного участника. \n
        5.2. На репутацию других участников может влиять любой пользователь, набравший 15 полезных постов. Если у вас нет 15 полезных постов, попросите модератора поднять репутацию оказавшему вам помощь человеку через кнопку [img]http://s.4pda.ru/forum/style_images/f/281-p_report.gif[/img].\n

-[5.3] "я тебе помог, а ты даже + не поставил"\n
        5.3. Запрещается скрытое или явное вымогательство поднятия репутации, например: «Я тебе помог, а ты даже спасибо не сказал!» или «Мог бы и репутацию поднять!». Если вы заслуживаете поднятия репутации, её вам поднимут без напоминаний.\n

-Обсуждение навигации, оффтоп\n
1.2 При обсуждении автомагнитол с навигатором необходимо помнить, что обсуждение функционала ведется в [url=http://4pda.ru/forum/index.php?showforum=635[b]Автомобильных устройствах[/b][/url], а навигационные вопросы в [url=http://4pda.ru/forum/index.php?showforum=236][b]Навигации[/b][/url] в соответствующем разделе и теме.\n

-Изображение под спойлер\n
Все графические изображения необходимо убирать под спойлер! \n
        [url=http://4pda.ru/forum/index.php?showtopic=353146]Как убрать изображение под спойлер[/url]\n

-Выбор и сравнение\n
1.4 Не забывайте, что для выбора и сравнения существует отдельный раздел форума [url=http://4pda.ru/forum/index.php?showforum=93][b]Выбор и сравнение[/b][/url].\n

-[4.8] Оскорбления. СООБЩИТЬ МОДЕРАТОРУ!\n
        4.8. Запрещается явная и скрытая грубость, хамство, оскорбления.\n

-[4.9] Матершина. СООБЩИТЬ МОДЕРАТОРУ!\n
        4.9. Запрещается использование нецензурной лексики, как явной, так и скрытой, в том числе и за спецсимволами.\n

    </string>
    <string name="main_rules">Main rules</string>
    <string name="text_size">Text size</string>
    <string name="export_import">Export / Import</string>
    <string name="this_button_will_export_your_section_to_clipboard">This button will export your section to clipboard</string>
    <string name="export">Export</string>
    <string name="exported"> exported to clipboard</string>
    <string name="this_button_will_import_section_from_clipboard">This button will import section from clipboard</string>
    <string name="import_button">Import</string>
    <string name="imported"> imported from clipboard</string>
    <string name="tag">Tag</string>
    <string name="list_look">List look</string>
    <string name="ending_phrase">Ending phrase</string>
    <string name="welcome_phrase">Welcome phrase</string>
    <string name="delete_rules_question">Really delete rules?</string>
    <string name="paste">Paste</string>
    <string name="export_full_base">Export full base</string>
    <string name="import_full_base">Import full base</string>
    <string name="exported_full_base">Exported full base</string>
    <string name="cant_get_data_from_clipboard">Can\'t get data from clipboard</string>
    <string name="imported_full_base">Imported full base</string>
    <string name="rule_tag">Tag</string>
    <string name="tag_on_separate_line">Tag on separate line</string>
    <string name="welcome_phrase_optional">Welcome phrase (optional)</string>
    <string-array name="list_look_entries">
        <item>Default</item>
        <item>Compact</item>
    </string-array>
    <string-array name="list_look_values">
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>
