<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_add_section"
            android:title="@string/add_section"/>

    <item
            android:id="@+id/action_delete_section"
            android:title="@string/delete_section"/>

    <item
            android:id="@+id/action_add_rule"
            android:title="@string/add_rule"/>

    <item
            android:id="@+id/action_export_import"
            android:title="@string/export_import"/>

    <item
            android:id="@+id/action_settings"
            android:title="@string/action_settings"/>

    <item
            android:id="@+id/action_about"
            android:title="@string/about"/>

</menu>
