<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/cab_rule_paste"
            android:icon="@android:drawable/ic_menu_share"
            android:orderInCategory="1"
            app:showAsAction="ifRoom"
            android:title="@string/paste"/>

    <item
            android:id="@+id/cab_rule_edit"
            android:icon="@android:drawable/ic_menu_edit"
            android:orderInCategory="1"
            app:showAsAction="ifRoom"
            android:title="@string/edit"/>

    <item
            android:id="@+id/cab_rule_delete"
            android:icon="@android:drawable/ic_menu_delete"
            android:orderInCategory="1"
            app:showAsAction="ifRoom"
            android:title="@string/delete"/>

</menu>